# containment-checking-starter

./: README.md
config/: gatorgrade.yml
containmentcheck/: pyproject.toml
writing/: reflection.md
